# LeYamanote

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  dodo.py  noxfile.py  pyproject.toml
leyamanote/: __init__.py  cifar10.py  services.py
scripts/: richard.py
tests/: conftest.py  test_e2e.py  test_integration.py  test_unit.py
